# godemo

./: .gitignore  README.md  main.go
assert/: assert2_test.go  assert_test.go
ast/test/: ast_test.go
auto/: main.go
cairo/: main.go
cairo/glfw/: main.go
cairo/sdl/: main.go
cgo/: anyway.cpp  cgo.go  cppgo.go
cgo/callcpp/: callstu.c  callstu.h  convert.cpp  convert.h  foo.go  student.cpp  student.h
cgo/cpointer/: main  main.go
channel/: channel.go
class/: main.go
class/stu/: student.go
cmake/hello/: CMakeLists.txt
cmake/hello/math/: CMakeLists.txt  math.c  math.h
cmake/hello/src/: config.h.in  hello.c  hello.h
code/: main.go  main.js
color/: colo.go
digui/: main.go
glfw/: glfw  main.go
inheritance/: main.go
inheritance/aaa/: a.go
inheritance/main/: impl.go
init/: initfunc.go
interface/: main.go
interface/aaa/: student.go
interface/auto/: auto.go
interface/impl/: impl.go
interface/sauto/: auto.go
interface/simpl/: impl.go
interface/sss/: student.go
interface_/: activity.go  i_test.go
interface_/test/: debug.test  interface_test.go
lang/: lang.go  lang_test.go
loop/: main  main.go
mask/: mask_test.go
name/: b.txt  d.txt  e.txt  name.go
opengl/: main.go
reflect/: main.go  reflect.go
reflect/app/: student.go
reflect/auto/: auto.go
reflect/impl/: impl.go
reflect2/: main.go
reflect2/auto/: auto.go
reflect3/: main.go
reflect4/: main.go  reflect_test.go
reflect5/: reflect.go
reflect6/: ref_test.go
runtime/: caller.go
test/: object_test.go
yaml/: ui.yml  yaml_test.go
(+10 files in other folders)
